styles/traway.css
/* ... */
#hero-login-button {
  color: white;
  border-radius: 0.3125rem;
  margin-left: 2rem;
  padding: 0.688rem 2.188rem;
  border: 0.0938rem solid #ffffff;
  text-decoration: none;
  margin-left: 3.125rem;
}

/* TODO: Match the color of text of Meet the Team section with the text color of Profiles section
It's too black...  */

#hero-login-button:hover {
  box-shadow: 0rem 0rem 0.3125rem rgba(255, 255, 255, 0.5),
    0rem 0rem 0.3125rem rgba(255, 255, 255, 1);
  background-color: rgba(0, 0, 0, 0.5);
}
.floatingdiv {
  display: flex;
  justify-content: space-between;
  padding-left: 5.875rem;
  padding-right: 5.875rem;
  padding-top: 1.625rem;
  padding-bottom: 0.9375rem;
  max-width: 71.688rem;
  margin-left: auto;
  margin-right: auto;
  background-color: white;
  margin-top: -2.3125rem;
  border-radius: 0.5rem;
  box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.15);
}
#distance-travelled {
  max-width: 7.75rem;
  max-height: 6.2125rem;
  display: flex;
  flex-direction: column;
}
.floatingdiv {
  display: flex;
}
#distance-travelled-svg {
  width: 1.375rem;
  height: 1.4375rem;
}
#active-users-svg {
  width: 2.1875rem;
  height: 1.5625rem;
}
#distance-travelled {
  margin-top: 0.1875rem;
}
#active-users {
  max-width: 7.75rem;
  max-height: 6.2125rem;
  display: flex;
  flex-direction: column;
  margin-top: 0rem;
}
.floating-div-coloured-text {
  color: #2a70fa;
}
.text {
  display: flex;
}
#bar-text {
  margin-left: 0.8125rem;
  font-size: 0.875rem;
  color: #676767;
}
#friends-img {
  width: 34.375rem;
  height: 23.375rem;
}
.svg-header-text {
  display: flex;
  flex-direction: column;
}
#heartsvg {
  width: 3.375rem;
  height: auto;
}
.common-heading-1 {
  font-size: 2rem;
  color: #2a70fa;
  margin-top: 0.8125rem;
  margin-bottom: 0px;
  width: 16.125rem;
  height: 4.875rem;
}
.common-para-1 {
  margin-top: 0.8125rem;
  margin-bottom: 0rem;
  font-size: 1.125rem;
  width: 16.125rem;
  font-weight: 400;
}
#choose-destination {
  width: 34.5625rem;
  height: 5.9375rem;
}
.svg-header-text-image-text {
  display: flex;
  flex-direction: column;
}
.master-div {
  display: flex;
  justify-content: space-evenly;
  margin-top: 6.5625rem;
}
.master-div-11 {
  display: flex;
  justify-content: space-evenly;
  margin-top: 6.5625rem;
}
.bar-text2 {
  margin-top: 7.5rem;
}
.img {
  margin-top: 1.625rem;
}
.img-1080 {
  display: none;
}
/* .slanted-div-1{
    position: relative;
    width:100%;
    height: 400px;
    background-color: #DCF3EB;
} */
/* .slanted-div-1:after{
    position:absolute;
    width: 100%;
    height: 100%;
    content: '';
    background:inherit;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    transform-origin: top right;
    transform:skewY(-12deg);
} */
.travelwithyourfriends::before {
  content: "";
  width: 100%;
  height: 41.7169rem;
  background-color: #dcf3eb;
  position: absolute;
  bottom: -87.5rem;
  transform: skew(0, -12deg);
  z-index: -10;
}
.travelwithyourfriends::after {
  content: "";
  width: 100%;
  height: 41.7169rem;
  background-color: #dcf3eb;
  position: absolute;
  bottom: -87.5rem;
  transform: skew(0, -12deg);
  z-index: -10;
  display: none;
}
.mail-text {
  display: grid;
  place-content: center;
}
.blackhole-text-img {
  display: grid;
  place-content: center;
  margin-top: 2rem;
}
.common-heading-2 {
  font-size: 2.638rem;
  color: #2a70fa;
  margin-top: 2.063rem;
  margin-bottom: 0rem;
  width: 29.063rem;
  height: 4.875rem;
}
.common-para-2 {
  margin-top: 2.063rem;
  margin-bottom: 0rem;
  font-size: 1.484rem;
  width: 29.063rem;
  font-weight: 400;
}
#multiplestopssvg {
  width: 4.188rem;
  height: auto;
}
.space {
  display: block;
  margin-top: 2.5rem;
}
#map-img {
  width: 32rem;
  height: 37.39rem;
  margin-left: 5rem;
}
#map-img-1080 {
  width: 32rem;
  height: 37.39rem;
  margin-left: 5rem;
}
#multiple-stops-container {
  margin-top: 13rem;
}
.blackhole {
  width: 43.75rem;
  height: 43.75rem;
  background-color: black;
  border-radius: 50%;
}
#div-heading {
  font-size: 2.638rem;
  color: #2a70fa;

  margin-bottom: 0rem;
  width: 36rem;
  height: 6.5rem;
  text-align: center;
}
#div-text {
  width: 30.6875rem;
  font-size: 1.5105rem;
  text-align: center;
}
#ticket-img {
  margin-left: auto;
  margin-right: auto;
  width: 19.6663rem;
  height: 31.8194rem;
  margin-top: -30rem;
}
#master-div-1 {
  width: auto;
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  margin-top: 16rem;
  position: relative;
}
.svg-icon,
.mail-section-div-heading,
.mail-section-div-text,
.blackhole,
.ticket-img {
  margin: 0 auto;
}
.background-img1 {
  display: block;
  background-color: #03171d;
  margin-top: 10rem;
  color: white;
  background-repeat: no-repeat;
  height: 100vh;
  background-size: cover;
  background-image: url(/styles/images/testimonials-homepage.webp);
}
/* .testimonial-heading{
    position: relative;
} */
/* #testimonials-heading::before{
    content: '';
    width: 10rem;
    height:1.4375rem;
    background-color:#2A70FA;
    position:absolute;
    
    left:46rem;
    

} */

/* .testimonial-heading{
    z-index: 3;
    position: relative;
}
.bar-under-text::before{
    
        content: '';
        width: 16.30rem;
        top: 2.3rem;
        height:1.4375rem;
        background-color:#2A70FA;
        position:absolute;
    
} */
.bar-under-text {
  background: linear-gradient(to bottom, transparent 60%, #2a70fa 50%);
}
#testimonials-heading {
  width: 42.48rem;
  font-size: 3.7rem;
  margin: 0 auto;
}
#small-blue-testimonial-heading {
  width: 10rem;
  margin: 0 auto;
  color: #b6b6b6;
}
#testimonial-text {
  width: 41.625rem;
  margin: 0 auto;
  font-weight: 500;
  font-size: 1.125rem;
  color: #b6b6b6;
  margin-top: 1rem;
}
/* for carousel js */

/* what i did to display shadow__ i added a height to card and increased the hieght of swiper by 1 rem  */
.swiper {
  height: 18rem;
  width: 100%;
}
.swiper-wrapper {
  width: 100%;
  overflow: scroll;
  gap: 20px;
}
/* ... */

